# galleria

./: .env  .gitignore  CLOUD_SYNC.md  GOOGLE_OAUTH_SETUP.md  QUICKSTART.md  README.md  SETUP.md  UPDATE_NOTES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: auth.rs  database.rs  image_processor.rs  main.rs  models.rs  oauth.rs  s3_uploader.rs
src/components/: ConfigModal.tsx  EmptyState.tsx  ErrorBoundary.tsx  Gallery.tsx  Header.tsx  LazyImage.tsx  Login.tsx  PhotoModal.tsx  ReloadToast.tsx  SearchBar.tsx  SettingsView.tsx  Sidebar.tsx  SyncWarning.tsx  UploadProgress.tsx  UploadView.tsx  UploadZone.tsx
src/components/ui/: button.tsx
src/hooks/: useAuth.ts  useKeyboardShortcuts.ts
src/store/: galleryStore.ts
